tests/fixtures/invalid/pow_list_dict_none.py
# Cannot call pow() with List[int], Dict[str, int], None
x = pow([1, 2, 3], {"a": 1}, None)
